[gd_scene load_steps=23 format=2]

[ext_resource path="res://frontend/Journal.tscn" type="PackedScene" id=1]
[ext_resource path="res://frontend/GUI/Red-dot.tscn" type="PackedScene" id=2]
[ext_resource path="res://frontend/GUI/ChatBox2.tscn" type="PackedScene" id=3]
[ext_resource path="res://frontend/GUI/GUI.gd" type="Script" id=4]
[ext_resource path="res://frontend/GUI/JournalTooltip.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/GUI/red-dot/red_dot_20.png" type="Texture" id=6]
[ext_resource path="res://assets/GUI/red-dot/red_dot_60.png" type="Texture" id=7]
[ext_resource path="res://assets/GUI/red-dot/red_dot_80.png" type="Texture" id=8]
[ext_resource path="res://assets/GUI/red-dot/red_dot_0.png" type="Texture" id=9]
[ext_resource path="res://assets/GUI/red-dot/red_dot.png" type="Texture" id=10]
[ext_resource path="res://assets/GUI/red-dot/red_dot_40.png" type="Texture" id=11]
[ext_resource path="res://frontend/GUI/SettingsTooltip.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/GUI/open_journal.png" type="Texture" id=13]
[ext_resource path="res://assets/GUI/configuration_gear.png" type="Texture" id=14]
[ext_resource path="res://frontend/GUI/GameOver.tscn" type="PackedScene" id=15]
[ext_resource path="res://frontend/Map.tscn" type="PackedScene" id=16]
[ext_resource path="res://frontend/GUI/MapTooltip.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/GUI/map2.png" type="Texture" id=18]
[ext_resource path="res://assets/GUI/thinking_bubble/thinking_bubble1.png" type="Texture" id=20]
[ext_resource path="res://assets/GUI/thinking_bubble/thinking_bubble3.png" type="Texture" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[node name="GUI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -452.58, 286.383 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chatbox" parent="." instance=ExtResource( 3 )]
margin_left = 35.6762
margin_top = 447.142
margin_right = 715.676
margin_bottom = 577.142

[node name="ConfigurationGear" type="Button" parent="."]
margin_left = 856.0
margin_top = 16.0
margin_right = 904.0
margin_bottom = 61.0
icon = ExtResource( 14 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Journal_on_button" type="Button" parent="."]
visible = false
margin_left = 776.0
margin_top = 16.0
margin_right = 832.0
margin_bottom = 61.0
icon = ExtResource( 13 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map_on_button" type="Button" parent="."]
visible = false
margin_left = 696.0
margin_top = 16.0
margin_right = 752.0
margin_bottom = 61.0
icon = ExtResource( 18 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Journal" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 184.291, 217.48 )
scale = Vector2( 1.34192, 1.28357 )

[node name="Rec" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 971.582, 552.981 )
frames = SubResource( 1 )
animation = "default"
frame = 6

[node name="SoundControl" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPC_voice_volume_control" type="HSlider" parent="SoundControl"]
margin_left = 870.0
margin_top = 139.185
margin_right = 1000.0
margin_bottom = 166.185
min_value = -20.0
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FireFx_volume_control" type="HSlider" parent="SoundControl"]
margin_left = 870.0
margin_top = 69.5926
margin_right = 1000.0
margin_bottom = 137.593
min_value = -30.0
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music_volume_control" type="HSlider" parent="SoundControl"]
margin_left = 870.0
margin_top = 155.593
margin_right = 1000.0
margin_bottom = 223.593
min_value = -30.0
max_value = 10.0
value = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fire_label" type="Label" parent="SoundControl"]
margin_left = 880.0
margin_top = 79.0
margin_right = 919.0
margin_bottom = 93.0
text = "Fire fx"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music_label" type="Label" parent="SoundControl"]
margin_left = 880.0
margin_top = 163.0
margin_right = 919.0
margin_bottom = 177.0
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPC_Voice_label" type="Label" parent="SoundControl"]
margin_left = 880.0
margin_top = 130.0
margin_right = 919.0
margin_bottom = 144.0
text = "NPC Voice"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JournalTooltip" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 832, 200 )

[node name="SettingsTooltip" parent="." instance=ExtResource( 12 )]
visible = false
position = Vector2( 976, 200 )

[node name="MapTooltip" parent="." instance=ExtResource( 17 )]
visible = false
position = Vector2( 747.894, 205.536 )

[node name="GameOver" parent="." instance=ExtResource( 15 )]
visible = false
position = Vector2( 224, 176 )

[node name="SFx" type="AudioStreamPlayer2D" parent="."]

[node name="Map" parent="." instance=ExtResource( 16 )]
visible = false
position = Vector2( 439.24, 301.359 )
scale = Vector2( 1.17076, 0.879005 )
frame = 7

[node name="Thinking_bubble" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 753.592, 312.797 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 2 )
playing = true

[connection signal="mouse_entered" from="ConfigurationGear" to="." method="_on_ConfigurationGear_mouse_entered"]
[connection signal="mouse_exited" from="ConfigurationGear" to="." method="_on_ConfigurationGear_mouse_exited"]
[connection signal="pressed" from="ConfigurationGear" to="." method="_on_ConfigurationGear_pressed"]
[connection signal="focus_entered" from="Journal_on_button" to="." method="_on_Journal_on_button_focus_entered"]
[connection signal="focus_exited" from="Journal_on_button" to="." method="_on_Journal_on_button_focus_exited"]
[connection signal="mouse_entered" from="Journal_on_button" to="." method="_on_Journal_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Journal_on_button" to="." method="_on_Journal_on_button_mouse_exited"]
[connection signal="pressed" from="Journal_on_button" to="." method="_on_Journal_on_button_pressed"]
[connection signal="mouse_entered" from="Map_on_button" to="." method="_on_Map_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Map_on_button" to="." method="_on_Map_on_button_mouse_exited"]
[connection signal="pressed" from="Map_on_button" to="." method="_on_Map_on_button_pressed"]
[connection signal="first_trigger" from="Journal" to="." method="_on_Journal_first_trigger"]
[connection signal="journal_complete" from="Journal" to="." method="_on_Journal_journal_complete"]
[connection signal="new_trigger_found" from="Journal" to="." method="_on_Journal_new_trigger_found"]
[connection signal="value_changed" from="SoundControl/NPC_voice_volume_control" to="." method="_on_NPC_voice_volume_control_value_changed"]
[connection signal="value_changed" from="SoundControl/FireFx_volume_control" to="." method="_on_FireFx_volume_control_value_changed"]
[connection signal="value_changed" from="SoundControl/Music_volume_control" to="." method="_on_Music_volume_control_value_changed"]
[connection signal="change_scene" from="Map" to="." method="_on_Map_change_scene"]
